--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+body{
+  margin: 0;
+  margin-top: 0.5rem;
+}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -115,7 +119,7 @@
   width: 80%;
   margin: 3rem auto 0 auto;
   grid-template-columns: 1fr 1fr;
-  /* padding: 4rem; */
+  border: none;
 }
 
 .box{
@@ -124,9 +128,8 @@
 }
 
 .item_details{
-  padding: 3rem 11rem 0rem 2rem;
+  padding: 2rem 7rem 0rem 2rem;
   margin: 0;
-  /* gap: ; */
 }
 
 .item_details #title{
@@ -251,10 +254,14 @@
   grid-template-rows: 1fr 0.3fr;
 }
 
+.carousel{
+  margin: 2rem auto auto auto;
+}
+
 .big-image{
   width: 27.5rem;
-  margin: 2rem auto auto auto;
   border-radius: 15px;
+  animation: slide-down-fade-in 0.3s ease-out forwards;
 }
 
 .flex-images{
@@ -276,6 +283,9 @@
   border: 3px solid rgba(255, 125, 26);
 }
 
+.arrow{
+  display: none;
+}
 
 /* Styles for Cart component */
 .items-cart{
@@ -304,6 +314,7 @@
   flex-direction: column;
   align-items: center;
   background-color: white;
+  z-index: 10;
 }
 
 .cart-content{
@@ -381,12 +392,61 @@ cursor: pointer;
   color: gray;
 }
 
+  /* Modal CSS */
 
-@media (min-width: 319px) and (max-width: 480px) {
+  .modal::backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    border: none;
+  }
+
+  .modal {
+    min-width: 30rem;;
+    padding: 0;
+    z-index: 2;
+    background: transparent;
+    border-radius: 8px;
+    animation: slide-down-fade-in 0.3s ease-out forwards;
+    border: 0px solid red;
+  }
+
+  .modal {
+    min-width: 30rem;;
+    padding: 0;
+    z-index: 2;
+    background: transparent;
+    border-radius: 8px;
+    animation: slide-down-fade-in 0.3s ease-out forwards;
+    border: none;
+    outline: none;
+  }
+
+  @keyframes slide-down-fade-in {
+    from {
+      opacity: 0;
+      transform: translateY(-3rem);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+/* Carousel */
+
+
+@media (min-width: 319px) and (max-width: 1080px) {
 
   .container{
     grid-template-columns: 1fr;
-    /* padding: 4rem; */
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
   
 
@@ -406,13 +466,14 @@ cursor: pointer;
   }
 
   .nav-links ul {
-    /* width: 100%; */
     flex-direction: column;
     position: fixed;
     top: 0;
     left: 0;
     width: 230px;
     z-index: 999;
+    background-color: white;
+    height: 100%;
   }
 
   #header > img{
@@ -446,10 +507,11 @@ cursor: pointer;
     height: 1.8rem;
   }
 
-#cart{
-  position: absolute;
-  right: -3rem;
-}
+  #cart{
+    position: absolute;
+    right: -1rem;
+    /* width: 23rem; */
+  }
 
   .nav-links li:hover {
     border-bottom: 5px orange solid;
@@ -459,4 +521,94 @@ cursor: pointer;
   #close_icon{
     margin-left: 1rem;
   }
+
+
+/* Image caroussel CSS */
+
+.images{
+  width: 100%;
+  grid-template-rows: 1fr;
+}
+
+.flex-images{
+  display: none;
+}
+
+.big-image{
+  width: 100%;
+  border-radius: 0px;
+}
+
+/* Product details CSS */
+  .item_details{
+    padding: 1rem;
+    margin: 0.5rem;
+  }
+
+  .item_details  h1{
+    margin-top: 3rem;
+    font-size: 2.2rem;
+    line-height: 1.1;
+  }
+
+  .item_details > p{
+    font-size: 1.1rem;
+    text-align: left;
+    color: hsl(219, 9%, 45%);
+    padding-right: 2rem;
+    font-weight: 400;
+  }
+
+  #buttons{
+   flex-direction: column;
+   justify-content: center;
+   margin-bottom: 2rem;
+  }
+
+  .button_wrapper{
+    width: 95%;
+  }
+
+  #add{
+    width: 100%;
+  }
+
+  .carousel{
+    position: relative;
+  }
+
+  .arrow{
+    position: absolute;
+    border-radius: 50%;
+    background-color: white;
+    border: none;
+    padding: 0.5rem;
+    width: 2.3rem;
+    display: inline;
+  }
+  
+  .arrow-left{
+    top: 48%;
+    left: 0rem;
+    text-align: center;
+    z-index: 3;
+  }
+  
+  .arrow-right{
+    top: 48%;
+    right: 0rem;
+    text-align: center;
+  }
+
+  /* Cart component */
+
+  .items-cart{
+    bottom: 1.3rem;
+  }
+
+  #checkout{
+    color: white m !important;
+  }
+
+
 }
